Overlapping problem solved by scaling

--- a/paint.css
+++ b/paint.css
@@ -45,11 +45,10 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  min-width: 160px;
+  /* min-width: 160px; */
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  margin-left:15px;
-  background-color: aliceblue;
+  background-color: grey;
 }
 
 #canvasDiv {
@@ -111,7 +110,7 @@ float: left;
 }
 
 .listingButton{
-width: 120px;
+width: 160px;
 height: 30px;
 border: 1px solid gray;
 box-shadow: inset 2px 2px 1px rgba(0,0,0,0.2);
@@ -126,7 +125,7 @@ margin-bottom: 3px;
 
 .listingButton:hover{
 opacity: 1;
-width:121px;
+width:161px;
 height:31px;
 
 }
